# pkg/service/am/handler.go
@@ -49,8 +49,8 @@ func (p *Server) DescribeUsersWithRole(ctx context.Context, req *pbam.DescribeUs
 	return p.db.DescribeUsersWithRole(ctx, req)
 }
 
-func (p *Server) ModifyRoleModule(ctx context.Context, req *pbam.RoleModule) (*pbam.RoleModule, error) {
-	return p.db.ModifyRoleModule(ctx, req)
+func (p *Server) ModifyRoleModuleBinding(ctx context.Context, req *pbam.RoleModule) (*pbam.RoleModule, error) {
+	return p.db.ModifyRoleModuleBinding(ctx, req)
 }
 
 func (p *Server) BindUserRole(ctx context.Context, req *pbam.BindUserRoleRequest) (*pbam.Empty, error) {
