# pkg/service/swagger-ui/am.swagger.json
@@ -223,12 +223,12 @@
     },
     "/v1/am/roles:module": {
       "patch": {
-        "operationId": "ModifyRoleModule",
+        "operationId": "ModifyRoleModuleBinding",
         "responses": {
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/amRoleModule"
+              "$ref": "#/definitions/amActionList"
             }
           }
         },
@@ -238,7 +238,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/amRoleModule"
+              "$ref": "#/definitions/amModifyRoleModuleBindingRequest"
             }
           }
         ],
@@ -527,6 +527,20 @@
         }
       }
     },
+    "amModifyRoleModuleBindingRequest": {
+      "type": "object",
+      "properties": {
+        "role_id": {
+          "type": "string"
+        },
+        "module": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/amModule"
+          }
+        }
+      }
+    },
     "amModule": {
       "type": "object",
       "properties": {
@@ -536,14 +550,9 @@
             "$ref": "#/definitions/amFeature"
           }
         },
-        "checked_action_id": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
         "data_level": {
-          "type": "string"
+          "type": "string",
+          "title": "repeated string checked_action_id = 2;"
         },
         "check_all": {
           "type": "boolean",
@@ -600,20 +609,6 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/amRole"
-          }
-        }
-      }
-    },
-    "amRoleModule": {
-      "type": "object",
-      "properties": {
-        "role_id": {
-          "type": "string"
-        },
-        "module": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/amModule"
           }
         }
       }
